--- a/config.toml
+++ b/config.toml
@@ -1,2 +1,2 @@
-siteTitle="ZBT - Xi Chapter - MIT"
-linkPrefix = "/zbt-website"
+siteTitle="MIT Korean Students Association"
+linkPrefix = "/ksa-website"
